[gd_scene load_steps=9 format=2]

[ext_resource path="res://Commons/r_dfd_button_font.tres" type="DynamicFontData" id=1]
[ext_resource path="res://Commons/f_s_qna/QnA.gd" type="Script" id=2]
[ext_resource path="res://images/bkg hallway.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[node name="QnA" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -750.0
margin_top = -340.0
margin_right = 750.0
margin_bottom = 160.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
question = "Dummy Qn"
agree_text = "Han"
disagree_text = "Nai"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_right = 0.00012207
margin_bottom = 150.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Do you want to talk to your friend Ron?[/center]"
text = "Do you want to talk to your friend Ron?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_agree" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -350.0
margin_right = 1400.0
margin_bottom = -200.0

[node name="button" type="Button" parent="button_agree"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1170.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_text" type="RichTextLabel" parent="button_agree"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -150.0
margin_bottom = -20.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "duh"
text = "duh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_disagree" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -175.0
margin_right = 1400.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="button_disagree"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1170.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_text" type="RichTextLabel" parent="button_disagree"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -150.0
margin_bottom = -20.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "duh"
text = "duh"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bkg hallway" type="Sprite" parent="."]
modulate = Color( 0.152941, 0.117647, 0.117647, 1 )
show_behind_parent = true
light_mask = 8233
position = Vector2( 751.958, 334.817 )
scale = Vector2( 1.49984, 1.49881 )
texture = ExtResource( 3 )
